--- a/domaci/vezba.css
+++ b/domaci/vezba.css
@@ -53,8 +53,7 @@ body {
   background-image: url(./porschepocetna.jpg);
   position: relative;
   bottom: -35px;
-  width: 100%;
-  height: 740px;
+  height: 440px;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
@@ -84,8 +83,9 @@ body {
 .div3 {
   background-image: url(./porscheispodpocetne.jpg);
   position: relative;
-  margin-top: -306px;
+  /* margin-top: -306px; */
   height: 700px;
+  /* display: inline-block; */
 }
 .div3 h1 {
   text-align: left;
@@ -139,5 +139,5 @@ body {
   border-radius: 15px;
   background-image: url(./911card2.jfif);
   background-size: cover;
-  display: ;
+  display: inline-block;
 }
