--- a/style.css
+++ b/style.css
@@ -68,10 +68,65 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 700px;
+  position: relative;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
-.section2 img:hover {
+/* .section2 img:hover {
   display: block;
   height: 700px;
   content: url(./moonsamabrandkit/Moonsama132.png);
-}
+} potrebna promena*/
 /* width="450" height="39"> moonsama header */
+.section3 {
+  background-image: url(./moonsamabrandkit/exomonsterbackground.png);
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 700px;
+}
+.section3 h1 {
+  font-family: calibri;
+  font-size: 25px;
+  font-weight: bold;
+  color: #00fa9a;
+  margin-left: 25px;
+  padding-top: 50px;
+}
+.section3 h2 {
+  font-family: calibri;
+  font-size: xx-large;
+  font-weight: bold;
+  color: #f0ffff;
+  margin-left: 25px;
+  line-height: 10px;
+}
+.section3 p {
+  font-family: calibri;
+  font-size: 18px;
+  text-indent: 7px;
+  color: #f0ffff;
+  margin-left: 25px;
+}
+.section3 img {
+  width: 187.02px;
+  height: 40px;
+  margin-left: 25px;
+}
+.section3 button {
+  font-size: 18px;
+  font-family: calibri;
+  background-color: transparent;
+  border: none;
+  color: #f0ffff;
+  margin-left: 25px;
+  margin-top: 20px;
+}
+.section3 button:hover {
+  border: 1px solid #00fa9a;
+  border-radius: 5px;
+}
+#span1 {
+  color: #00fa9a;
+}
